chore: remove unused c8 dependency to resolve security alerts

--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -56,8 +56,7 @@ jobs:
 
     - name: Run smoke tests
       run: |
-        yarn c8 yarn smoke --debug -j=2 --retries=2 --shard=${{ matrix.smoke-test-shard }}/$SHARD_TOTAL
-        yarn c8 report --reporter text-lcov > smoke-coverage.lcov
+        yarn smoke --debug -j=2 --retries=2 --shard=${{ matrix.smoke-test-shard }}/$SHARD_TOTAL
 
     # TODO(15841): remove when using trace by default, and we want to remove CDT graph impl.
     - name: Run smoke tests (lantern + trace)
@@ -66,13 +65,6 @@ jobs:
         yarn smoke --debug -j=2 --retries=2 lantern
       env:
         INTERNAL_LANTERN_USE_TRACE: 1
-
-    - name: Upload test coverage to Codecov
-      if: matrix.chrome-channel == 'ToT'
-      uses: codecov/codecov-action@eaaf4bedf32dbdc6b720b63067d99c4d77d6047d
-      with:
-        flags: smoke
-        file: ./smoke-coverage.lcov
 
     # Fail if any changes were written to source files.
     - run: git diff --exit-code
